--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="note_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat dui tristique volutpat semper. Fusce semper sit amet erat ut interdum. Etiam varius ac odio sed facilisis. </string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="notificatin_channel">Disability_channel</string>
 </resources>
