--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="notificatin_channel">Disability_channel</string>
+
+    <string name="dummyTitle">title</string>
+    <string name="dummyNote">Lorem Ipsum dolor sit amit consectetur rises</string>
+
 </resources>
